Fri Jan 11 16:41:29 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/examples/xmlsearch/*: Added files contributed by Nathan Hand
	and me to implement XML output from htsearch, including DTD, templates
	and config file.

Wed Jan  9 22:08:21 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* CONFIG.in: Fixed to allow setting BIN_DIR by configure option.
	* contrib/htdig-3.1.6.spec: Fixed to make use of new ./configure
	options for pathnames, do away with patch file.  Used variables for
	many pathnames to allow easy changes.

Wed Jan  9 16:22:32 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Added support for max_keywords
	attribute.

Wed Jan  9 16:10:44 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (HTML, do_tag), htdig/ExternalParser.cc (parse):
	Added support for description_meta_tag_names attribute.
	Ensure external parser interface accepts META descriptions even if
	'description' is added to the keyword list.
	* htcommon/defaults.cc: Added description_meta_tag_names attribute.
	* htdoc/attrs.html, htdoc/cf_by{name,prog}.html: Documented it.

Tue Jan  8 17:39:24 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc (parse): Added support for use_doc_date
	attribute.

Thu Jan  3 17:10:50 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Makefile.in, htlib/lib.h: Removed references to timegm,
	mytimegm and strptime functions. Removed C source for these.

Thu Jan  3 16:43:31 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/htmerge.html: Added extra description for -m option to clear
	up common points of confusion, added note about LC_COLLATE environment
	variable.

Fri Dec 21 18:52:32 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc: Added parsedcdate function, used by got_time,
	to parse DC date meta tags without requiring strptime or timegm.
