@@ -1,0 +1,43 @@
+<!ELEMENT HTDIG ((RESULT*|ERROR),SEARCH)>
+
+<!ELEMENT RESULT (TITLE,URL,SCORE,PERCENT,EXCERPT,SIZE,SIZEK,DESCRIPTION,DESCRIPTIONS,CURRENT,MODIFIED,HOPCOUNT,DOCID,ANCHOR,BACKLINKS,TITLE)>
+<!ELEMENT URL (#PCDATA)>
+<!ELEMENT SCORE (#PCDATA)>
+<!ELEMENT PERCENT (#PCDATA)>
+<!ELEMENT EXCERPT (#PCDATA)>
+<!ELEMENT SIZE (#PCDATA)>
+<!ELEMENT SIZEK (#PCDATA)>
+<!ELEMENT DESCRIPTION (#PCDATA)>
+<!ELEMENT DESCRIPTIONS (#PCDATA)>
+<!ELEMENT CURRENT (#PCDATA)>
+<!ELEMENT MODIFIED (#PCDATA)>
+<!ELEMENT HOPCOUNT (#PCDATA)>
+<!ELEMENT DOCID (#PCDATA)>
+<!ELEMENT ANCHOR (#PCDATA)>
+<!ELEMENT BACKLINKS (#PCDATA)>
+
+<!ELEMENT ERROR (SYNTAX|INTERNAL)>
+<!ELEMENT SYNTAX (#PCDATA)>
+<!ELEMENT INTERNAL (#PCDATA)>
+
+<!ELEMENT SEARCH (WORDS,LOGICAL_WORDS,MATCH_METHOD,SORT,KEYWORDS,MATCHES,FIRSTDISPLAYED,LASTDISPLAYED,MATCHES_PER_PAGE,PAGE,CGI,CONFIG,EXCLUDE,RESTRICT,VERSION)>
+<!ELEMENT WORDS (#PCDATA)>
+<!ELEMENT LOGICAL_WORDS (#PCDATA)>
+<!ELEMENT MATCH_METHOD (and|or|boolean)>
+<!ELEMENT SORT (score|time|title|revscore|revtime|revtitle))>
+<!ELEMENT KEYWORDS (#PCDATA)>
+<!ELEMENT MATCHES (#PCDATA)>
+<!ELEMENT FIRSTDISPLAYED (#PCDATA)>
+<!ELEMENT LASTDISPLAYED (#PCDATA)>
+<!ELEMENT MATCHES_PER_PAGE (#PCDATA)>
+<!ELEMENT PAGE (#PCDATA)>
+<!ELEMENT CGI (#PCDATA)>
+<!ELEMENT CONFIG (#PCDATA)>
+<!ELEMENT EXCLUDE (#PCDATA)>
+<!ELEMENT RESTRICT (#PCDATA)>
+<!ELEMENT VERSION (#PCDATA)>
+
+<!ENTITY author "Nathan Hand">
+<!ENTITY email "nathanh@manu.com.au">
+<!ENTITY copyright "LGPL">
+<!ENTITY version "1.0">
