@@ -1,0 +1,17 @@
+<RESULT>
+<TITLE>$&(TITLE)</TITLE>
+<URL>$&(URL)</URL>
+<SCORE>$&(SCORE)</SCORE>
+<PERCENT>$&(PERCENT)</PERCENT>
+<EXCERPT>$&(EXCERPT)</EXCERPT>
+<SIZE>$&(SIZE)</SIZE>
+<SIZEK>$&(SIZEK)</SIZEK>
+<DESCRIPTION>$&(DESCRIPTION)</DESCRIPTION>
+<DESCRIPTIONS>$&(DESCRIPTIONS)</DESCRIPTIONS>
+<CURRENT>$&(CURRENT)</CURRENT>
+<MODIFIED>$&(MODIFIED)</MODIFIED>
+<HOPCOUNT>$&(HOPCOUNT)</HOPCOUNT>
+<DOCID>$&(DOCID)</DOCID>
+<ANCHOR>$&(ANCHOR)</ANCHOR>
+<BACKLINKS>$&(BACKLINKS)</BACKLINKS>
+</RESULT>
