@@ -1,0 +1,20 @@
+<?xml version="1.0"?>
+<HTDIG>
+$(HTSEARCH_RESULTS)<SEARCH>
+<WORDS>$&(WORDS)</WORDS>
+<LOGICAL_WORDS>$&(LOGICAL_WORDS)</LOGICAL_WORDS>
+<MATCH_METHOD>$&(SELECTED_METHOD)</MATCH_METHOD>
+<SORT>$&(SELECTED_SORT)</SORT>
+<KEYWORDS>$&(KEYWORDS)</KEYWORDS>
+<MATCHES>$&(MATCHES)</MATCHES>
+<FIRSTDISPLAYED>$&(FIRSTDISPLAYED)</FIRSTDISPLAYED>
+<LASTDISPLAYED>$&(LASTDISPLAYED)</LASTDISPLAYED>
+<MATCHES_PER_PAGE>$&(MATCHES_PER_PAGE)</MATCHES_PER_PAGE>
+<PAGE>$&(PAGE)</PAGE>
+<CGI>$&(CGI)</CGI>
+<CONFIG>$&(CONFIG)</CONFIG>
+<EXCLUDE>$&(EXCLUDE)</EXCLUDE>
+<RESTRICT>$&(RESTRICT)</RESTRICT>
+<VERSION>$&(VERSION)</VERSION>
+</SEARCH>
+</HTDIG>
