@@ -1,0 +1,9 @@
+include:	htdig.conf
+iso_8601:	true
+date_format:	%Y-%m-%d
+search_results_contenttype:	text/xml
+search_results_wrapper:	${common_dir}/wrapper.xml
+nothing_found_file:	${common_dir}/nomatch.xml
+syntax_error_file:	${common_dir}/syntax.xml
+template_map:		xml xml ${common_dir}/result.xml
+template_name:		xml
